[tool.poetry]
name = "vicroads-transport-api"
version = "0.1.0"
description = ""
authors = ["saikumarmk"]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.1"
aiohttp = "^3.9.1"
gtfs-realtime-bindings = "^1.0.0"
pydantic = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
